tdf#144132 Crash when insert formula object in Writer

regression from
    commit ec01d43e0a8fa560d7cd8c76c0d609b18a60cddb
    Date:   Wed Jul 21 14:24:28 2021 +0200
    pass SfxChildWinFactory around by value

Change-Id: I88bc6c8bfd35d0a653512b064c9ee0d59b1e8b38